@@ -31,38 +31,38 @@ include_once 'functions.php';
 if (!empty($_SESSION[$CONFIG_name.'account_id'])) {
 	if ($_SESSION[$CONFIG_name.'account_id'] > 0) {
 
-		if (!empty($GET_opt)) {
-			if ($GET_opt == 1 && isset($GET_frm_name) && !strcmp($GET_frm_name, "password")) {
-				if (strcmp($GET_newpass, $GET_confirm) != 0) 
+		if (!empty($POST_opt)) {
+			if ($POST_opt == 1 && isset($POST_frm_name) && !strcmp($POST_frm_name, "password")) {
+				if (strcmp($POST_newpass, $POST_confirm) != 0) 
 					alert($lang['PASSWORD_NOT_MATCH']);
 
-				if (inject($GET_login_pass) || inject($GET_newpass)) 
+				if (inject($POST_login_pass) || inject($POST_newpass)) 
 					alert($lang['INCORRECT_CHARACTER']);
 
-				if (strlen($GET_login_pass) < 4 || strlen($GET_login_pass) > 23)
+				if (strlen($POST_login_pass) < 4 || strlen($POST_login_pass) > 23)
 					alert($lang['PASSWORD_LENGTH_OLD']);
 
-				if ($CONFIG_safe_pass && (strlen(trim($GET_newpass)) < 6 || strlen(trim($GET_newpass)) > 23))
+				if ($CONFIG_safe_pass && (strlen(trim($POST_newpass)) < 6 || strlen(trim($POST_newpass)) > 23))
 					alert($lang['PASSWORD_LENGTH']);
 
-				if (strlen(trim($GET_newpass)) < 4 || strlen(trim($GET_newpass)) > 23)
+				if (strlen(trim($POST_newpass)) < 4 || strlen(trim($POST_newpass)) > 23)
 					alert($lang['PASSWORD_LENGTH_OLD']);
 
-				if ($CONFIG_safe_pass && thepass(trim($GET_newpass)))
+				if ($CONFIG_safe_pass && thepass(trim($POST_newpass)))
 					alert($lang['PASSWORD_REJECTED']);
 
 				if ($CONFIG_md5_pass) {
-					$GET_login_pass = md5($GET_login_pass);
-					$GET_newpass = md5($GET_newpass);
+					$POST_login_pass = md5($POST_login_pass);
+					$POST_newpass = md5($POST_newpass);
 				}
 
-				$query = sprintf(CHECK_PASSWORD, trim($GET_login_pass), $_SESSION[$CONFIG_name.'account_id']);
+				$query = sprintf(CHECK_PASSWORD, trim($POST_login_pass), $_SESSION[$CONFIG_name.'account_id']);
 				$result = execute_query($query, 'password.php');
 
 				if (!$result->fetch_row())
 					alert($lang['INCORRECT_PASSWORD']);
 
-				$query = sprintf(CHANGE_PASSWORD, trim($GET_newpass), $_SESSION[$CONFIG_name.'account_id']);
+				$query = sprintf(CHANGE_PASSWORD, trim($POST_newpass), $_SESSION[$CONFIG_name.'account_id']);
 				$result = execute_query($query, 'password.php');
 
 				redir("password.php", "main_div", $lang['PASSWORD_CHANGED']);
@@ -71,7 +71,7 @@ if (!empty($_SESSION[$CONFIG_name.'account_id'])) {
 
 	opentable($lang['CHANGE_PASSWORD']);
 		echo "
-		<form id=\"password\" onsubmit=\"return GET_ajax('password.php','main_div','password')\"><table>
+		<form id=\"password\" onsubmit=\"return POST_ajax('password.php','main_div','password')\"><table>
 		<tr><td align=right>".$lang['PASSWORD'].":</td><td>
 			<input type=\"password\" name=\"login_pass\" maxlength=\"23\" size=\"23\" onKeyPress=\"return force(this.name,this.form.id,event);\">
 			</td></tr>
